--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav class="menu-navigation">
             <ul>
                 <li><a href="#coffee">☕ COFFEE</a></li>
-                <li><a href="#teas">🍵 TEAS</a></li>
-                <li><a href="#fresh-drinks">🥤 FRESH DRINKS</a></li>
-                <li><a href="#bubble-tea">🧋 BUBBLE TEA</a></li>
+                <li><a href="#teas">🥤 COLD COFFEE & DRINKS</a></li>
+                <li><a href="#fresh-drinks">🍸 SIGNATURE DRINKS</a></li>
+                <li><a href="#bubble-tea">🍵 BUBBLE TEA</a></li>
                 <li><a href="#cocktails">🍹 COCKTAILS</a></li>
                 <li><a href="#shots">🥃 SHOTS</a></li>
             </ul>
@@ -31,38 +31,77 @@
             <section id="coffee" class="menu-section">
                 <h2>☕ COFFEE</h2>
                 <ul>
-                    <li>Espresso <span>$9</span></li>
-                    <li>Americano <span>$9</span></li>
-                    <li>Latte <span>$8</span></li>
-                    <li>Cappuccino <span>$8</span></li>
-                    <li>Mocha <span>$8</span></li>
+                    <li>Еспресо<span>18 грн</span></li>
+                    <li>Кава по-кубинськи<span>20 грн</span></li>
+                    <li>Лунго<span>22 грн</span></li>
+                    <li>Американо<span>25 грн</span></li>
+                    <li>Подвійне американо<span>40 грн</span></li>
+                    <li>Капучино<span>30/35 грн</span></li>
+                    <li>Подвійне капучино<span>40/45 грн</span></li>
+                    <li>Лате<span>35/40 грн</span></li>
+                    <li>Гарячий шоколад<span>45 грн</span></li>
+                    <li>Кава по-віденськи<span>50 грн</span></li>
+                    <li>Капуорандж<span>45 грн</span></li>
+                    <li>Амарето з вишнею<span>40 грн</span></li>
+                    <li>Айс хіт<span>50 грн</span></li>
+                    <li>Раф<span>45 грн</span></li>
+                    <li>Згущений раф<span>45 грн</span></li>
+                    <li>Мокко<span>50 грн</span></li>
+                    <li>Какао<span>40 грн</span></li>
+                    <li>Живий чай<span>30 грн</span></li>
+                    <li>Чай<span>20 грн</span></li>
+                    <li>Альтернатива<span>20 грн</span></li>
                 </ul>
             </section>
 
             <section id="teas" class="menu-section">
-                <h2>🍵 TEAS</h2>
+                <h2>🥤 COLD COFFEE & DRINKS</h2>
                 <ul>
-                    <li>Lemon Tea <span>$9</span></li>
-                    <li>Green Tea <span>$9</span></li>
-                    <li>Jasmine Tea <span>$8</span></li>
-                    <li>Earl Grey <span>$8</span></li>
-                    <li>Raspberry Tea <span>$8</span></li>
+                    <li>Еспрессо тонік<span>45 грн</span></li>
+                    <li>Айс лате<span>40 грн</span></li>
+                    <li>Холодна кава арилат<span>45 грн</span></li>
+                    <li>Пінья колада<span>60 грн</span></li>
+                    <li>Лимонна калада<span>60 грн</span></li>
+                    <li>Мохито<span>50 грн</span></li>
+                    <li>Молочний коктейль<span>80 грн</span></li>
+                    <li>Шоколадно-молочний<span>80 грн</span></li>
+                    <li>Айс матча<span>50 грн</span></li>
+                    <li>Айс американо<span>40 грн</span></li>
+                    <li>Бабл лате<span>60 грн</span></li>
+                    <li>Бабл матча<span>60 грн</span></li>
                 </ul>
             </section>
 
             <section id="fresh-drinks" class="menu-section">
-                <h2>🥤 FRESH DRINKS</h2>
+                <h2>🍸 SIGNATURE DRINKS</h2>
                 <ul>
-                    <li>Hot Chocolate <span>$9</span></li>
-                    <li>Milkshake <span>$9</span></li>
-                    <li>Smoothie <span>$8</span></li>
-                    <li>Lemonade <span>$8</span></li>
-                    <li>Vanilla Milkshake <span>$9</span></li>
+                    <li>Смарагд<span>50 грн</span></li>
+                    <li>Крем-сода<span>50 грн</span></li>
+                    <li>Барбарис<span>50 грн</span></li>
+                    <li>Грінч<span>55 грн</span></li>
+                    <li>Блакитна лагуна<span>50 грн</span></li>
+                    <li>Рожева пантера<span>80 грн</span></li>
+                    <li>Атланта<span>50 грн</span></li>
+                    <li>Джміль<span>50 грн</span></li>
+                    <li>Орандж матча<span>50 грн</span></li>
+                    <li>Фрапе<span>65 грн</span></li>
+                    <li>Раф (Фісташковий, Кокосовий, Мегдалевий)<span>45 грн</span></li>
+                    <li>Еспрессо-тонік-оранж<span>50 грн</span></li>
+                    <li>Каламель-фредо-лате<span>50 грн</span></li>
+                    <li>Снікерс-фредо-лате<span>50 грн</span></li>
+                    <li>Кава з арахісовою пастою<span>50 грн</span></li>
+                    <li>Афогато<span>60 грн</span></li>
+                    <li>Бананова кава + морозиво<span>70 грн</span></li>
+                    <li>Айс какао солона карамель<span>70 грн</span></li>
+                    <li>Матча-полуниця<span>55 грн</span></li>
+                    <li>Матча-ківі<span>55 грн</span></li>
+                    <li>Матча-вишня<span>55 грн</span></li>
+                    <li>Mood coktail<span>90 грн</span></li>
                 </ul>
             </section>
 
             <section id="bubble-tea" class="menu-section">
-                <h2> 🧋 BUBBLE TEA</h2>
+                <h2> 🍵 BUBBLE TEA</h2>
                 <ul>
                     <li>Бабл чай зі згущеним молоком<span>80 грн</span></li>
                     <li>Бабл з анчаном зі згущеним молоком<span>80 грн</span></li>
@@ -117,13 +156,13 @@
         <footer class="menu-footer">
             <p>Follow us on:</p>
             <div class="social-links">
-                <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-btn instagram" aria-label="Instagram">
+                <a href="https://www.instagram.com/mood_korets?igsh=Nzh3b2JvaXpoZ2Nm" target="_blank" class="social-btn instagram" aria-label="Instagram">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
                         <path d="M 16 3 C 8.83 3 3 8.83 3 16 L 3 34 C 3 41.17 8.83 47 16 47 L 34 47 C 41.17 47 47 41.17 47 34 L 47 16 C 47 8.83 41.17 3 34 3 L 16 3 z M 37 11 C 38.1 11 39 11.9 39 13 C 39 14.1 38.1 15 37 15 C 35.9 15 35 14.1 35 13 C 35 11.9 35.9 11 37 11 z M 25 14 C 31.07 14 36 18.93 36 25 C 36 31.07 31.07 36 25 36 C 18.93 36 14 31.07 14 25 C 14 18.93 18.93 14 25 14 z M 25 16 C 20.04 16 16 20.04 16 25 C 16 29.96 20.04 34 25 34 C 29.96 34 34 29.96 34 25 C 34 20.04 29.96 16 25 16 z"></path>
                     </svg>
                     <span>Instagram</span>
                 </a>
-                <a href="https://www.tiktok.com/@yourprofile" target="_blank" class="social-btn tiktok" aria-label="TikTok">
+                <a href="https://www.tiktok.com/@mood_korets?is_from_webapp=1&sender_device=pc" target="_blank" class="social-btn tiktok" aria-label="TikTok">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
                         <path d="M41,4H9C6.243,4,4,6.243,4,9v32c0,2.757,2.243,5,5,5h32c2.757,0,5-2.243,5-5V9C46,6.243,43.757,4,41,4z M37.006,22.323 c-0.227,0.021-0.457,0.035-0.69,0.035c-2.623,0-4.928-1.349-6.269-3.388c0,5.349,0,11.435,0,11.537c0,4.709-3.818,8.527-8.527,8.527 s-8.527-3.818-8.527-8.527s3.818-8.527,8.527-8.527c0.178,0,0.352,0.016,0.527,0.027v4.202c-0.175-0.021-0.347-0.053-0.527-0.053 c-2.404,0-4.352,1.948-4.352,4.352s1.948,4.352,4.352,4.352s4.527-1.894,4.527-4.298c0-0.095,0.042-19.594,0.042-19.594h4.016 c0.378,3.591,3.277,6.425,6.901,6.685V22.323z"></path>
                     </svg>
@@ -134,3 +173,4 @@
     </div>
 </body>
 </html>
+
